--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "frontend/index.js",
 	"scripts": {
 		"start": "webpack-dev-server --open --mode development",
-		"start-prod": "node app.js",
-		"test": "jest",
+		"start-prod": "node index.js",
+		"test": "NODE_ENV=test jest --forceExit",
 		"eslint": "eslint './**/*.{js,jsx}'",
 		"build": "webpack --mode production",
 		"test:e2e": "cypress open"
@@ -26,11 +26,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.19.6",
 		"@babel/preset-react": "^7.18.6",
+		"babel-jest": "^29.2.2",
 		"babel-loader": "^9.0.0",
 		"eslint": "^8.23.0",
 		"eslint-plugin-react": "^7.31.10",
 		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"jest": "^29.2.2",
+		"supertest": "^6.3.1",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.11.1"
