--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --open --mode development",
 		"start-prod": "node index.js",
+		"start-test": "NODE_ENV=test node index.js",
 		"test": "NODE_ENV=test jest --forceExit",
 		"eslint": "eslint './**/*.{js,jsx}'",
 		"build": "webpack --mode production",
@@ -28,6 +29,7 @@
 		"@babel/preset-react": "^7.18.6",
 		"babel-jest": "^29.2.2",
 		"babel-loader": "^9.0.0",
+		"cypress": "^10.11.0",
 		"eslint": "^8.23.0",
 		"eslint-plugin-react": "^7.31.10",
 		"html-loader": "^4.2.0",
