--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Deployment pipeline
 on:
   push:
     branches:
-      - master
+      - main
       
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -23,10 +23,8 @@ jobs:
       - name: build
         run: npm run build
       - name: test
+        env:
+          TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+          PORT: 3001
+          NODE_ENV: test 
         run: npm run test
-      - name: e2e tests
-        uses: cypress-io/github-action@v4
-        with:
-          build: npm run build
-          start: npm run start-prod
-          wait-on: http://localhost:5000
