--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,8 @@ on:
       
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  MONGODB_URI: ${{ secrets.MONGODB_URI }}
+  TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
 
 jobs:
   simple_deployment_pipeline:    
@@ -23,8 +25,10 @@ jobs:
       - name: build
         run: npm run build
       - name: test
-        env:
-          TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
-          PORT: 3001
-          NODE_ENV: test 
         run: npm run test
+      - name: e2e tests
+        uses: cypress-io/github-action@v4
+        with:
+          build: npm run build
+          start: npm run start-test
+          wait-on: http://localhost:3001
