--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,11 +7,10 @@ on:
       
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  MONGODB_URI: ${{ secrets.MONGODB_URI }}
   TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
 
 jobs:
-  simple_deployment_pipeline:    
+  predeployment_tasks:    
     runs-on: ubuntu-20.04    
     steps:      
       - uses: actions/checkout@v3
@@ -32,3 +31,12 @@ jobs:
           build: npm run build
           start: npm run start-test
           wait-on: http://localhost:3001
+  deploy:
+    name: deploy app
+    needs: [predeployment_tasks]
+    if: ${{ !contains(toJson(join(github.event.commits.*.message, ' ')), '#skip') && github.event_name == 'push' }}
+    runs-on: ubuntu-20.04
+    steps:
+     - uses: actions/checkout@v3
+     - uses: superfly/flyctl-actions/setup-flyctl@master
+     - run: flyctl deploy --remote-only
