--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,15 +31,31 @@ jobs:
           build: npm run build
           start: npm run start-test
           wait-on: http://localhost:3001
-  deploy:
-    name: deploy app
-    needs: [predeployment_tasks]
+  deploy: 
     if: ${{ !contains(toJson(join(github.event.commits.*.message, ' ')), '#skip') && github.event_name == 'push' }}
     runs-on: ubuntu-20.04
+    needs: [predeployment_tasks]
     steps:
-     - uses: actions/checkout@v3
-     - uses: superfly/flyctl-actions/setup-flyctl@master
-     - run: flyctl deploy --remote-only
+    - uses: actions/checkout@v3
+    - uses: superfly/flyctl-actions/setup-flyctl@master
+    - name: deploy app
+      run: flyctl deploy --remote-only 
+    - name: send success notification
+      uses: rjstone/discord-webhook-notify@v1
+      if: ${{ success() && github.event_name == 'push' }}
+      with:
+        severity: info
+        description: 'Commit ${{ github.sha }}'
+        details: Build succeeded.
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}        
+    - name: send failure notification
+      uses: rjstone/discord-webhook-notify@v1
+      if: ${{ failure() && github.event_name == 'push' }}
+      with:
+        severity: error
+        description: 'Commit ${{ github.sha }}'
+        details: Build failed.
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}  
   tag_releases:
     if: ${{ !contains(toJson(join(github.event.commits.*.message, ' ')), '#skip') && github.event_name == 'push' }}
     needs: [deploy]
